--- a/css/navbar.css
+++ b/css/navbar.css
@@ -94,76 +94,3 @@
     color:  #4682b4;
     box-shadow: inset 0 -4px 0 0 #4682b4;
 }
-
-/* === Media Queries === */
-@media (max-width: 665px ) {
-    
-    /* navbar */
-    .navbar{
-        padding: 0 5% !important;
-    }
-    
-   .navbar-menu {
-        display: inline-block;
-    }
-    
-   .navbar-item {
-      display: none;
-   }
-    
-    .page{
-        padding: 5%;
-    }
-    
-    /* About page */
-    .bio{
-        margin: 5% !important;
-    }
-    
-    .profileImg{
-        width: 150px !important;
-        height: 150px !important;
-    }
-}
-
-@media (max-width: 1000px){
-        /* Project Page */
-    
-    .page{
-        padding-top: 80px;
-    }
-    
-    .infobar{
-        margin-left: 0 !important;  
-        padding: 2% !important;
-        display: block !important;
-        float: none !important;
-        width: 100% !important;
-    }
-    
-    .tiles{
-        display: block;
-        float: none !important;
-        width: 100% !important;
-    }
-    
-    .tiles-row{
-        display: inline-block !important;
-        height: 100% !important;
-        width: 50% !important;
-    }
-    
-    .tiles-cell{
-        height: 20% !important;
-    }
-}
-
-@media (min-width: 666px){
-    .navbar-menu {
-        display: none;
-    }
-    
-    .navbar-item{
-        display: inline-block !important;
-    }
-}
