--- a/css/projects.css
+++ b/css/projects.css
@@ -9,15 +9,12 @@
 /* === Left hand side === */
 
 .infobar{
-    float: left;
+    display: table-cell;
     width: 45%;
-    padding: 1em;
-    padding-top: 1.5em;
-    margin-left: 2.5em;
     border-left: 10px solid transparent;
-    border-right: 10px solid transparent;
     background-color: rgba(255,255,255, 0.7);
     text-align: left;
+    vertical-align: top;
 }
 
 .infobar-instruction{
@@ -26,7 +23,10 @@
 
 .project-page{
     display: none;
+    height: 100%;
     opacity: 0;
+    overflow-y: scroll;
+    padding: 1em;
 }
 
 .project-title{
@@ -48,10 +48,10 @@
 /* === Right hand side === */
 
 .tiles{
-    display: table;
-    float: right;
-    height: 100%;
-    width: 48%;
+    display: table-cell;
+    width: 50%;
+    padding-left: 2em;
+    padding-right: 1em;
     animation-name: fadeInRight;
 }
 
